--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 // add all component's styles here !
 
-@import './page.module.scss';
-@import './mixins.scss';
-@import './fonts.scss';
+@import "./page.module.scss";
+@import "./mixins.scss";
+@import "./fonts.scss";
 
 // components styles
