--- a/src/page.module.scss
+++ b/src/page.module.scss
@@ -1,10 +1,37 @@
 @use "sass:list";
 @use "sass:color";
+@import './styles/variables.scss';
 
-$font-stack: Helvetica, Arial;
-$primary-color: #333;
+.welcome {
+  text-align: center;
+  padding: 40px 20px;
+}
 
-.size {
-  width: 400px;
-  height: 400px;
+.title {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.description {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.authButtons {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.button {
+  background-color: $accent-color;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.2s ease;
+
+  &:hover {
+    background-color: darken($accent-color, 5%);
+  }
 }
