feat: add tests and layout for the project

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,6 @@
 @use "sass:list";
 @use "sass:color";
-@import './styles/variables.scss';
+@import "../styles/variables.scss";
 
 .welcome {
   text-align: center;
