--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,4 +6,4 @@ $footer-bg: #e6e6e6;
 $link-color: #61afef;
 $link-hover: darken($link-color, 10%);
 
-$font-primary: 'Ayu Sans', sans-serif;
+$font-primary: "Ayu Sans", sans-serif;
