--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/variables.scss";
+@import "../../../styles/mixins.scss";
 
 .footer {
   background-color: $footer-bg;
@@ -12,6 +13,8 @@
 }
 
 .footerContent {
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,6 +33,7 @@
     img {
       width: 24px;
       height: auto;
+      @include hover-scale();
     }
   }
 }
