--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -1,22 +1,32 @@
-@import '../../../styles/variables.scss';
+@import "../../../styles/variables.scss";
+@import "../../../styles/mixins.scss";
 
 .header {
-  position: fixed;
+  position: sticky;
   top: 0;
   background-color: $header-bg;
-  padding: 16px 24px;
+  padding: 21px 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
+  z-index: 10x;
   transition: all 0.3s ease;
+}
 
-  &:hover {
-    background-color: lighten($header-bg, 5%);
-  }
-  flex-direction: column;
+.headerContent {
+  margin: 0 auto;
+  max-width: 1440px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.sticky {
+  padding: 12px 24px;
+  background-color: darken($header-bg, 15%);
+  border-bottom-left-radius: 9px;
+  border-bottom-right-radius: 9px;
 }
 
 .logoContainer {
@@ -29,13 +39,14 @@
 }
 
 .headerRight {
-  margin-top: 10px;
   display: flex;
   align-items: center;
   gap: 16px;
+
   img {
-    height: auto;
     width: 24px;
+    height: auto;
+    @include hover-scale();
   }
 
   .langToggle {
@@ -55,6 +66,7 @@
       text-decoration: none;
       font-size: 16px;
       transition: color 0.2s ease;
+
       &:hover {
         color: $accent-color;
       }
