--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 $background: #f5f5f5;
 $text: #333333;
@@ -6,7 +6,7 @@ $button-bg: #3498db;
 $button-hover: #2980b9;
 
 .container {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   background-color: $background;
   color: $text;
   min-height: 100vh;
@@ -29,7 +29,7 @@ $button-hover: #2980b9;
     font-size: 24px;
     margin-bottom: 20px;
   }
-  
+
   p {
     font-size: 18px;
     margin-bottom: 30px;
@@ -50,7 +50,7 @@ $button-hover: #2980b9;
   border-radius: 5px;
   font-size: 16px;
   transition: background-color 0.2s ease;
-  
+
   &:hover {
     background-color: $button-hover;
   }
