--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,7 @@
-@import './variables.scss';
+@import "./variables.scss";
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: $font-primary, sans-serif;
@@ -9,6 +10,7 @@ html, body {
 }
 
 .layoutContainer {
+  margin: 0 auto;
   display: flex;
   min-height: calc(100vh - 80px);
   flex-direction: column;
