--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -4,3 +4,13 @@
     transform: scale($scale);
   }
 }
+
+// Skeleton
+@keyframes skeleton-loading {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
