--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 10x;
+  z-index: 10;
   transition: all 0.3s ease;
 }
 
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .sticky {
@@ -35,6 +36,13 @@
     font-size: 24px;
     font-weight: bold;
     text-decoration: none;
+    @include hover-scale();
+  }
+  // Skeleton placeholder for the logo area
+  .headerSkeleton {
+    width: 200px;
+    height: 30px;
+    border-radius: 4px;
   }
 }
 
@@ -72,4 +80,20 @@
       }
     }
   }
+}
+
+/* Skeleton-specific classes for header's right side */
+.imageSkeleton {
+  width: 24px;
+  height: 24px;
+}
+
+.buttonSkeleton {
+  width: 50px;
+  height: 24px;
+}
+
+.linkSkeleton {
+  width: 60px;
+  height: 24px;
 }
