--- a/src/app/components/footer/index.module.scss
+++ b/src/app/components/footer/index.module.scss
@@ -37,7 +37,6 @@
     }
   }
 }
-
 /* Responsive styles for mobile devices */
 @media (max-width: 767px) {
   .footer {
@@ -47,4 +46,17 @@
     flex-direction: column;
     gap: 8px;
   }
+}
+/* Skeleton */
+.skeletonLink {
+  width: 80px;
+  height: 20px;
+}
+.skeletonText {
+  width: 50px;
+  height: 20px;
+}
+.skeletonImage {
+  width: 24px;
+  height: 24px;
 }
