--- a/src/app/components/header/index.module.scss
+++ b/src/app/components/header/index.module.scss
@@ -63,6 +63,7 @@
   .authLinks {
     display: flex;
     gap: 12px;
+    align-items: center;
 
     .link {
       color: $text-color;
@@ -95,6 +96,11 @@
 .linkSkeleton {
   width: 60px;
   height: 24px;
+}
+
+.signoutButton {
+  @include button-style;
+  color: #ffffff;
 }
 
 /* Responsive breakpoints for mobile devices */
