fix: refactoring code + add lazy loading

--- a/src/components/home/index.module.scss
+++ b/src/components/home/index.module.scss
@@ -1,6 +1,6 @@
 @use "sass:list";
 @use "sass:color";
-@use "../../../styles/variables.scss" as *;
+@use "../../styles/variables.scss" as *;
 
 .welcome {
   text-align: center;
