--- a/src/components/signin/index.module.scss
+++ b/src/components/signin/index.module.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/variables.scss" as *;
-@use "../../../app/page.module.scss" as *;
+@use "../../styles/variables.scss" as *;
+@use "../../app/page.module.scss" as *;
 
 .container {
   display: flex;
