--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,6 @@ $link-color: #61afef;
 $link-hover: color.scale($link-color, $lightness: -10%);
 
 $font-primary: "Ayu Sans", sans-serif;
+
+$footer-height: 51px;
+$footer-height-mob: 143px;
