--- a/src/components/collections/response-body/index.module.scss
+++ b/src/components/collections/response-body/index.module.scss
@@ -1,12 +1,30 @@
 @use "@/styles/mixins.scss" as *;
 
+.wrapper {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 16px;
+  box-sizing: border-box;
+}
+
 .textarea {
   @include input-style;
-  width: 90%;
-  max-width: 800px;
-  max-height: 200px;
-  margin: 0 auto;
+  width: 100%;
+  height: 300px;
+  box-sizing: border-box;
   resize: vertical;
   font-family: Menlo, Consolas, monospace;
   line-height: 1.4;
+
+  &:focus {
+    outline: none;
+    border-color: #0070f3;
+  }
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    padding: 0;
+  }
 }
