--- a/src/app/pages/home/index.module.scss
+++ b/src/app/pages/home/index.module.scss
@@ -1,6 +1,7 @@
 @use "sass:list";
 @use "sass:color";
 @use "../../../styles/variables.scss" as *;
+@use "../../../styles/mixins.scss" as *;
 
 .welcome {
   text-align: center;
@@ -25,16 +26,7 @@
 }
 
 .button {
-  background-color: $accent-color;
-  color: white;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.2s ease;
-
-  &:hover {
-    background-color: color.scale($accent-color, $lightness: -5%);
-  }
+  @include button-style;
 }
 
 .skeleton {
