--- a/src/app/pages/signup/index.module.scss
+++ b/src/app/pages/signup/index.module.scss
@@ -1,6 +1,12 @@
 @use "../../../styles/variables.scss" as *;
 @use "../../../app/page.module.scss" as *;
+@use "../../../styles/mixins.scss" as *;
 
+.form {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -11,4 +17,21 @@
   background-color: $background-color;
   color: $text-color;
   padding: 20px;
+}
+
+.input {
+  @include input-style;
+  margin-left: 10px;
+}
+
+.button {
+  @include button-style;
+}
+
+.buttonDisabled {
+  @include button-disabled;
+}
+
+.link {
+  @include postman-link;
 }
