--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,8 @@ $header-bg: #e6e6e6;
 $footer-bg: #e6e6e6;
 $link-color: #61afef;
 $link-hover: color.scale($link-color, $lightness: -10%);
+$btn-disabled-bg: #dddddd;
+$btn-disabled-text: #777777;
 
 $font-primary: "Ayu Sans", sans-serif;
 
