--- a/src/app/components/locale-switcher-select/index.module.scss
+++ b/src/app/components/locale-switcher-select/index.module.scss
@@ -8,13 +8,11 @@
 }
 
 .selectButton {
+  @include input-style;
   display: flex;
   align-items: center;
   gap: 8px;
   padding: 6px 12px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  border-radius: 6px;
   cursor: pointer;
   min-width: 120px;
   transition: background-color 0.2s;
@@ -39,13 +37,11 @@
 }
 
 .dropdown {
+  @include input-style;
   position: absolute;
-  top: calc(100% + 4px);
+  top: calc(100% - 9px);
   left: 0;
   z-index: 10;
-  background: white;
-  border: 1px solid #ccc;
-  border-radius: 6px;
   width: auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 4px 0;
