--- a/src/components/signup/index.module.scss
+++ b/src/components/signup/index.module.scss
@@ -16,22 +16,48 @@
 
 .form {
   display: flex;
-  gap: 10px;
-  margin-bottom: 10px;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
 }
 .input {
   @include input-style;
-  margin-left: 10px;
+  width: 100%;
 }
 
 .button {
   @include button-style;
+  display: flex;
+  justify-content: center;
 }
 
 .buttonDisabled {
   @include button-disabled;
+  width: 100%;
 }
 
 .link {
   @include postman-link;
+  margin-top: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+}
+
+.error {
+  color: $accent-color;
+  font-size: 0.875rem;
+  margin-top: 2px;
+}
+
+.success {
+  color: green;
+  font-size: 0.875rem;
+  margin-top: 2px;
 }
